--- a/src/main/resources/assets/moballurgy/lang/en_us.json
+++ b/src/main/resources/assets/moballurgy/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "item.moballurgy.frostbite_male_entity_egg": "Frostbite Male Egg",
-  "entity.moballurgy.frostbite_entity": "Frostbite"
+  "entity.moballurgy.frostbite_entity": "Frostbite",
+  "itemGroup.moballurgy": "Moballurgy"
 }
